<resources>

    <string name="app_name">TeamCEVN_OperatorID_2022</string>

    <string name="upper_sieve">Upper Sieve</string>
    <string name="rotor_speed">Rotor Speed</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="lower_sieve">Lower Sieve</string>
    <string name="_12_mph">12 mph</string>
    <string name="motor_speed">Motor Speed</string>
    <string name="save">Save</string>
    <string name="ground_speed">Ground Speed</string>

    <string name="password">password</string>
    <string name="username">username</string>
    <string name="log_in">Log in</string>
    <string name="string">string</string>
    <string name="connect_with_bluetooth">Connect with Bluetooth</string>

    <string name="manage_presets">Manage Presets</string>
    <string name="user_1">Vishnu</string>
    <string name="user_2">Nathan</string>
    <string name="title_activity_home_screen">Home_Screen</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">email</string>
    <string name="forgot_password">forgot_password</string>
    <string name="sign_up">sign_up</string>
    <string name="person">Person</string>
    <string name="button">Button</string>
    <string name="machine_spinner">Permissions</string>
    <string-array name="spinnerItems">
        <item>Manager</item>
        <item>Operator</item>
        <item>Custom</item>
    </string-array>
</resources>