<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal|vertical"
    android:fadingEdgeLength="10dp"
    tools:context=".MachineSettings">


    <EditText
        android:id="@+id/FanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="580dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/fan_speed" />

    <EditText
        android:id="@+id/RotorSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="510dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/rotor_speed" />

    <EditText
        android:id="@+id/UpperSieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="440dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/upper_sieve" />

    <EditText
        android:id="@+id/LowerSieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="370dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/lower_sieve" />

    <EditText
        android:id="@+id/MotorSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/motor_speed" />

    <EditText
        android:id="@+id/GroundSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="230dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:text="@string/ground_speed" />

    <Spinner
        android:id="@+id/MachineName"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="48dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/spinnerItems"
        android:isScrollContainer="true"
        android:outlineProvider="paddedBounds"
        android:spinnerMode="dialog"
        android:prompt="@string/machine_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_wrapBehaviorInParent="included"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="81dp"
        android:backgroundTint="#36762b"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/save"
        android:textColor="#fcfc03"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="510dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="580dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="440dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <EditText
        android:id="@+id/editTextNumber7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="370dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <EditText
        android:id="@+id/editTextNumber8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <EditText
        android:id="@+id/editTextNumber9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="230dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/averia_libre_light"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_12_mph" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@drawable/nav_color_selected"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_bar" />


</RelativeLayout>